# RocrailBBTCalculator

./: CMakeLists.txt  README.md  appveyor.yml
cmake/: windeployqt.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  calculation.cpp  core.cpp  planparser.cpp  workspace.cpp
src/gui/: CMakeLists.txt  application.qrc  application.qrc.cmake.in  bbtmodel.cpp  blockmodel.cpp  imagesortfilterproxymodel.cpp  locmodel.cpp  mainwindow.cpp  mainwindowcontroller.cpp  routemodel.cpp
src/gui/forms/: mainwindow.ui
src/gui/icons/: smoke-from--train-icon-72006.xcf
src/gui/translations/: rocrailBBT_de.ts  rocrailBBT_en.ts
src/include/core/: calculation.hpp  core.hpp  datastructs.hpp  planparser.hpp  workspace.hpp
src/include/gui/: bbtmodel.hpp  blockmodel.hpp  imagesortfilterproxymodel.hpp  locmodel.hpp  mainwindow.hpp  mainwindowcontroller.hpp  routemodel.hpp
