CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(rocrailBBTCalculator)

FIND_PACKAGE(Qt5 COMPONENTS Widgets Xml REQUIRED)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(gui)

ADD_EXECUTABLE(rocrailBBTCalculator)

TARGET_SOURCES(rocrailBBTCalculator
  PRIVATE
    main.cpp
)

TARGET_LINK_LIBRARIES(rocrailBBTCalculator
  PRIVATE
    Qt5::Widgets

    bbtCalculatorCore
)