CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(rocrailBBTCalculator
  LANGUAGES CXX
  VERSION 0.1.0
)

FIND_PACKAGE(Qt5 COMPONENTS Widgets Xml REQUIRED)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(gui)

ADD_EXECUTABLE(rocrailBBTCalculator)

TARGET_SOURCES(rocrailBBTCalculator
  PRIVATE
    main.cpp
)

TARGET_LINK_LIBRARIES(rocrailBBTCalculator
  PRIVATE
    Qt5::Widgets

    bbtCalculatorCore
)

INSTALL(TARGETS rocrailBBTCalculator
  RUNTIME DESTINATION bin
)

SET(CPACK_PACKAGE_NAME "rocrailBBTCalculator")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "rocrailBBTCalculator")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Calculates BBT values for RocRail Locomotives")

SET(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
SET(CPACK_NSIS_DISPLAY_NAME "Rocrail BBT Calculator")
SET(CPACK_NSIS_PACKAGE_NAME "Rocrail BBT Calculator Setup")

SET(CPACK_GENERATOR NSIS)

INCLUDE(CPack)